Added project list page

--- a/Server/index.html
+++ b/Server/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Dalen Ward</title>
+        <title>DalenW - Home</title>
         <meta name="viewport" content="width=device-width">
 
         <link type="text/css" rel="stylesheet" href="https://necolas.github.io/normalize.css/5.0.0/normalize.css">
@@ -23,7 +23,7 @@
 
                 <div id="quicklinksDiv" class="headerDiv">
                     <div class="quicklinksItemDiv">
-                        <a href="/projects">
+                        <a href="/projects/list">
                             <div class="quicklinksItem">Projects</div>
                         </a>
                     </div>
