--- a/site/projects/list.html
+++ b/site/projects/list.html
@@ -5,7 +5,7 @@
         <title>DalenW - Projects</title>
         <meta name="viewport" content="width=device-width">
 
-        <link type="text/css" rel="stylesheet" href="https://necolas.github.io/normalize.css/5.0.0/normalize.css">
+        <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
         <link type="text/css" rel="stylesheet" href="/styles/main.css">
         <link type="text/css" rel="stylesheet" href="/styles/header.css">
         <link type="text/css" rel="stylesheet" href="/styles/projects.css">
