--- a/site/simplymac/fedexshortener.html
+++ b/site/simplymac/fedexshortener.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>DalenW - Home</title>
+        <title>FedEx Tracking Number Shortener</title>
         <meta name="viewport" content="width=device-width">
 
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
@@ -58,7 +58,8 @@
             var value = $("#barcodeInput").val();
 
             if(value.length == 34) {
-                if(value.slice(0, 4) == "1001") {
+                var shipType = value.slice(0,2);
+                if(shipType == "10" || shipType == "96") {
                     var bar = value.slice(22, 26) + " " + value.slice(26, 30) + " " + value.slice(30);
                     
                     console.log(bar);
@@ -67,7 +68,7 @@
                     var copyText = document.querySelector("#output");
                     console.log(copyText);
                     //copyText.select();
-                    document.execCommand("copy");
+                    //document.execCommand("copy");
 
                     //$("#copyAlert").show();
                     //$("#copyAlert").fadeOut(4000);
