--- a/site/simplymac/fedexshortener.html
+++ b/site/simplymac/fedexshortener.html
@@ -7,12 +7,10 @@
 
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
         <link type="text/css" rel="stylesheet" href="/styles/main.css">
+        <link type="text/css" rel="stylesheet" href="operations.css">
     </head>
 
     <style>
-        main {
-            padding-left: 10%
-        }
         #barcodeInput {
             width: 350px;
         }
@@ -27,7 +25,7 @@
 
     <body>
         <header>
-            <h1 style="text-align: center">FedEx Tracking Number Shortener</h1>
+            <a href="/simplymac/"><h1>FedEx Tracking Number Shortener</h1></a>
         </header>
 
         <main>
