--- a/site/simplymac/operations.html
+++ b/site/simplymac/operations.html
@@ -7,13 +7,18 @@
 
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
         <link type="text/css" rel="stylesheet" href="/styles/main.css">
+        <link type="text/css" rel="stylesheet" href="operations.css">
     </head>
 
-    <main>
-        <h1>Simply Mac Operations</h1>
-        <p>Currently I work at Simply Mac as an operations manager. This is a site of tools I use to make my job easier.</p>
+    <body>
+        <header>
+            <h1>Simply Mac Operations</h1>
+        </header>
+        <main>
+            <p>Currently I work at Simply Mac as an operations manager. This is a site of tools I use to make my job easier.</p>
 
-        <a href="/simplymac/fedexshortener">FedEx Tracking Number Shortener</a>
-    </main>
+            <a href="/simplymac/fedexshortener" class="link">FedEx Tracking Number Shortener</a>
+        </main>
+    </body>
 </html>
 
