changed operations page title

--- a/site/simplymac/operations.html
+++ b/site/simplymac/operations.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>DalenW - Home</title>
+        <title>SM Operations</title>
         <meta name="viewport" content="width=device-width">
 
         <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
