Added service part form, mostly functional

--- a/site/simplymac/operations.html
+++ b/site/simplymac/operations.html
@@ -17,7 +17,8 @@
         <main>
             <p>Currently I work at Simply Mac as an operations manager. This is a site of tools I use to make my job easier.</p>
 
-            <a href="/simplymac/fedexshortener" class="link">FedEx Tracking Number Shortener</a>
+            <a href="/simplymac/fedexshortener" class="link"><p>FedEx Tracking Number Shortener</p></a>
+            <a href="/simplymac/servicepart" class="link"><p>Part Recieving</p></a>
         </main>
     </body>
 </html>
