cleaned up code and css

--- a/site/simplymac/operations.html
+++ b/site/simplymac/operations.html
@@ -1,25 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>SM Operations</title>
-        <meta name="viewport" content="width=device-width">
 
-        <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-        <link type="text/css" rel="stylesheet" href="/styles/main.css">
-        <link type="text/css" rel="stylesheet" href="operations.css">
-    </head>
+<head>
+    <meta charset="utf-8">
+    <title>SM Operations</title>
+    <meta name="viewport" content="width=device-width">
 
-    <body>
-        <header>
-            <h1>Simply Mac Operations</h1>
-        </header>
-        <main>
-            <p>Currently I work at Simply Mac as an operations manager. This is a site of tools I use to make my job easier.</p>
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
+    <link type="text/css" rel="stylesheet" href="/styles/main.css">
+    <link type="text/css" rel="stylesheet" href="operations.css">
+</head>
 
-            <a href="/simplymac/fedexshortener" class="link"><p>FedEx Tracking Number Shortener</p></a>
-            <a href="/simplymac/servicepart" class="link"><p>Part Recieving</p></a>
-        </main>
-    </body>
+<style>
+    header {
+        text-align: center;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #smLogo {
+        width: 50px;
+        height: 50px;
+    }
+
+    h1 {
+        width: 400px;
+    }
+</style>
+
+<body>
+    <header>
+        <img id="smLogo" src="/images/sm_logo.svg" alt="Simply Mac Logo" title="Logo">
+        <h1>Simply Mac Operations</h1>
+    </header>
+    <main>
+        <p>Currently I work at Simply Mac as an operations manager. This is a site of tools I use to make my job easier.
+        </p>
+
+        <a href="/simplymac/fedexshortener" class="link">
+            <p>FedEx Tracking Number Shortener</p>
+        </a>
+        <a href="/simplymac/servicepart" class="link">
+            <p>Part Recieving</p>
+        </a>
+    </main>
+</body>
+
 </html>
-
