Added Simple Check-In tool

--- a/site/simplymac/operations.html
+++ b/site/simplymac/operations.html
@@ -45,6 +45,9 @@
         <a href="/simplymac/servicepart" class="link">
             <p>Part Recieving</p>
         </a>
+        <a href="/simplymac/simplecheckin" class="link">
+            <p>Simple Check-In</p>
+        </a>
     </main>
 </body>
 
