Added SimplyMac to the link list

--- a/site/index.html
+++ b/site/index.html
@@ -27,8 +27,8 @@
                 </div>
 
                 <div class="quicklinksItemDiv">
-                    <a href="/photos">
-                        <div class="quicklinksItem">Photos</div>
+                    <a href="/simplymac/operations">
+                        <div class="quicklinksItem">Simply Mac</div>
                     </a>
                 </div>
 
