Updated jQuery and normalize

--- a/site/projects/hackintosh/index.html
+++ b/site/projects/hackintosh/index.html
@@ -29,7 +29,7 @@
     <meta name="msapplication-config" content="images/favicon/browserconfig.xml">
     <!-- ****** faviconit.com favicons ****** -->
 
-    <link type="text/css" rel="stylesheet" href="https://necolas.github.io/normalize.css/5.0.0/normalize.css">
+    <link type="text/css" rel="stylesheet" href="/styles/normalize.css">
     <link type="text/css" rel="stylesheet" href="css/main.css">
 </head>
 
