--- a/site/projects/weather/home.html
+++ b/site/projects/weather/home.html
@@ -6,7 +6,7 @@
     <title id="title">Weather Home</title>
     <meta name="viewport" content="width=device-width">
 
-    <link type="text/css" rel="stylesheet" href="https://necolas.github.io/normalize.css/5.0.0/normalize.css">
+    <link type="text/css" rel="stylesheet" href="/styles/normalize.css">
     <link type="text/css" rel="stylesheet" href="css/main.css">
     <link type="text/css" rel="stylesheet" href="css/mobile.css">
     <link type="text/css" rel="stylesheet" href="css/desktop.css">
