Added repair options and sro notes

--- a/site/simplymac/simplecheckin.html
+++ b/site/simplymac/simplecheckin.html
@@ -31,7 +31,7 @@
                     <option>1. iPhone Broken Display Replacement</option>
                     <option>2. iPhone Battery replacement</option>
                     <option>3. Malware Removal</option>
-                    <option>4. Wipe and reinstall</option>
+                    <option>4. Boot Issues</option>
                     <option>5. iPhone 7 No-Service REP</option>
                     <option>6. iPhone X Display REP</option>
                     <option>7. MacBook Keyboard REP</option>
@@ -40,15 +40,10 @@
                 </select>
             </div>
 
-            <div id="deviceSelectDiv">
-                <p id="deviceSelectTitle">Device:</p>
-                <select id="deviceSelect">
-                    <option>1. iPhone SE</option>
-                    <option>2. iPhone 6s, 7, 8</option>
-                    <option>3. iPhone 6s+, 7+, 8+</option>
-                    <option>4. iPhone XR, 11</option>
-                    <option>5. iPhone X, XS, 11 Pro</option>
-                    <option>6. iPhone XS Max, 11 Pro Max</option>
+            <div id="optionSelectDiv">
+                <p id="optionSelectTitle">Option:</p>
+                <select id="optionSelect">
+                    
                 </select>
             </div>
 
@@ -141,6 +136,18 @@
 
                         </div>
                     </form>
+                </div>
+
+                <div id="SRONotesDiv" class="formDiv">
+                    <h3>Common SRO Notes</h3>
+
+                    <p>Called and spoke with customer, </p>
+                    <p>Called and spoke with customer, let them know that their device is ready to be picked up.</p>
+                    <p>Called customer and left a voicemail notifying them that their device is ready to be picked up.</p>
+                    <p>Removed all malware from the device and it is running a lot better.</p>
+                    <p>Performed an archive install of macOS, computer is booting normally.</p>
+                    <p>Reformatted drive and installed macOS.</p>
+                    <p>Found SRO in outgoing paperwork pile, marking it as picked up.</p>
                 </div>
             </div>
         </div>
