--- a/site/simplymac/simplecheckin.html
+++ b/site/simplymac/simplecheckin.html
@@ -149,6 +149,11 @@
                     <p>Performed an archive install of macOS, computer is booting normally.</p>
                     <p>Reformatted drive and installed macOS.</p>
                     <p>Found SRO in outgoing paperwork pile, marking it as picked up.</p>
+                    <p>Thanks for choosing Simply Mac as your Apple Service Authorized Service Provider.
+
+                        As a thank you we would like to offer you 15% any accessory and our Simple Care warranty at a great price!
+                        
+                        We are able to offer you a Warranty on your device starting at $99 for a years worth of coverage.  Ask any of our associates for more information</p>
                 </div>
             </div>
         </div>
