Added better links page and new checking options

--- a/site/simplymac/operations.html
+++ b/site/simplymac/operations.html
@@ -7,27 +7,8 @@
     <meta name="viewport" content="width=device-width">
 
     <link type="text/css" rel="stylesheet" href="/styles/main.css">
-    <link type="text/css" rel="stylesheet" href="operations.css">
+    <link type="text/css" rel="stylesheet" href="styles/operations.css">
 </head>
-
-<style>
-    header {
-        text-align: center;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-    }
-
-    #smLogo {
-        width: 50px;
-        height: 50px;
-    }
-
-    h1 {
-        width: 400px;
-    }
-</style>
 
 <body>
     <header>
@@ -35,18 +16,36 @@
         <h1>Simply Mac Operations</h1>
     </header>
     <main>
-        <p>Currently I work at Simply Mac as an operations manager. This is a site of tools I use to make my job easier.
+        <p id="description">Currently I work at Simply Mac as a Mac Technician. This is a site of tools I use to make my job easier.
         </p>
 
-        <a href="/simplymac/fedexshortener" class="link">
-            <p>FedEx Tracking Number Shortener</p>
-        </a>
-        <a href="/simplymac/servicepart" class="link">
-            <p>Part Recieving</p>
-        </a>
-        <a href="/simplymac/simplecheckin" class="link">
-            <p>Simple Check-In</p>
-        </a>
+        <div id="links">
+            <a href="/simplymac/fedexshortener" class="link">
+                <p>FedEx Tracking Number Shortener</p>
+            </a>
+            <a href="/simplymac/servicepart" class="link">
+                <p>Part Recieving</p>
+            </a>
+            <a href="/simplymac/simplecheckin" class="link">
+                <p>Simple Check-In</p>
+            </a>
+            <a href="/files/macOS Scripts/" class="link">
+                <p>macOS Scripts</p>
+            </a>
+            <a href="https://www.malwarebytes.com/mac-download/" class="link" target="_blank">
+                <p>Malwarebytes</p>
+            </a>
+            <a href="https://freemacsoft.net/appcleaner/" class="link" target="_blank">
+                <p>App Cleaner</p>
+            </a>
+            <a href="https://s3.amazonaws.com/sqwarq.com/PublicZips/DetectX_Swift.dmg" class="link" target="_blank">
+                <p>DetectX Swift</p>
+            </a>
+            <a href="https://www.titanium-software.fr/en/onyx.html" class="link" target="_blank">
+                <p>Onyx</p>
+            </a>
+            
+        </div>
     </main>
 </body>
 
