--- a/site/simplymac/servicepart.html
+++ b/site/simplymac/servicepart.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width">
 
     <link type="text/css" rel="stylesheet" href="/styles/main.css">
-    <link type="text/css" rel="stylesheet" href="operations.css">
-    <link type="text/css" rel="stylesheet" href="servicepart.css">
+    <link type="text/css" rel="stylesheet" href="styles/operations.css">
+    <link type="text/css" rel="stylesheet" href="styles/servicepart.css">
 </head>
 
 <body>
@@ -35,6 +35,6 @@
     </main>
 </body>
 <script src="/scripts/jquery.js"></script>
-<script src="servicepart.js"></script>
+<script src="js/servicepart.js"></script>
 
 </html>
