--- a/site/simplymac/fedexshortener.html
+++ b/site/simplymac/fedexshortener.html
@@ -6,10 +6,31 @@
         <meta name="viewport" content="width=device-width">
 
         <link type="text/css" rel="stylesheet" href="/styles/main.css">
-        <link type="text/css" rel="stylesheet" href="operations.css">
     </head>
 
     <style>
+        body {
+            color: var(--slategray);
+        }
+
+        main {
+            padding-left: 10%
+        }
+
+        h1 {
+            text-align: center;
+            color: var(--slategray);
+        }
+
+        .link {
+            color: var(--main-blue);
+        }
+
+        p {
+            margin-top: 5px;
+            margin-bottom: 5px;
+        }
+
         #barcodeInput {
             width: 350px;
         }
