Added archive links

--- a/site/simplymac/operations.html
+++ b/site/simplymac/operations.html
@@ -32,6 +32,12 @@
             <a href="/files/macOS Scripts/" class="link">
                 <p>macOS Scripts</p>
             </a>
+            <a href="https://drive.google.com/drive/folders/1lz2qWBdEHS9SvcoCGBVk2WwC2h0ADHu8" class="link">
+                <p>macOS Tools</p>
+            </a>
+            <a href="https://drive.google.com/open?id=1MCnlMxCksBTXNaaoCR5iKr3wJVv20l-1" class="link">
+                <p>macOS Installers</p>
+            </a>
             <a href="https://www.malwarebytes.com/mac-download/" class="link" target="_blank">
                 <p>Malwarebytes</p>
             </a>
