Improved SM CSS and added GA

--- a/site/simplymac/operations.html
+++ b/site/simplymac/operations.html
@@ -6,28 +6,19 @@
     <title>SM Operations</title>
     <meta name="viewport" content="width=device-width">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120281725-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-120281725-1');
+    </script>
+
     <link type="text/css" rel="stylesheet" href="/styles/main.css">
-    <link type="text/css" rel="stylesheet" href="operations.css">
+    <link type="text/css" rel="stylesheet" href="styles/operations.css">
 </head>
-
-<style>
-    header {
-        text-align: center;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-    }
-
-    #smLogo {
-        width: 50px;
-        height: 50px;
-    }
-
-    h1 {
-        width: 400px;
-    }
-</style>
 
 <body>
     <header>
@@ -35,18 +26,90 @@
         <h1>Simply Mac Operations</h1>
     </header>
     <main>
-        <p>Currently I work at Simply Mac as an operations manager. This is a site of tools I use to make my job easier.
+        <p id="description">Currently I work at Simply Mac as a Mac Technician. This is a site of tools I use to make my job easier.
         </p>
 
-        <a href="/simplymac/fedexshortener" class="link">
-            <p>FedEx Tracking Number Shortener</p>
-        </a>
-        <a href="/simplymac/servicepart" class="link">
-            <p>Part Recieving</p>
-        </a>
-        <a href="/simplymac/simplecheckin" class="link">
-            <p>Simple Check-In</p>
-        </a>
+        <div id="links">
+            <div class="container round-edge">
+                <div class="c-title">
+                    <p>FedEx Shortener</p>
+                </div>
+                <div class="c-content">A FedEx Tracking number shortener.</div>
+                <a href="/simplymac/fedexshortener" class="c-link round-edge" target="_blank"> Link</a>
+            </div>
+
+            <div class="container round-edge">
+                <div class="c-title">
+                    <p>Part Recieving</p>
+                </div>
+                <div class="c-content">A form to fill out when recieving parts. Not too useful now.</div>
+                <a href="/simplymac/servicepart" class="c-link round-edge" target="_blank"> Link</a>
+            </div>
+
+            <div class="container round-edge">
+                <div class="c-title">
+                    <p>Simple Check-In</p>
+                </div>
+                <div class="c-content">Easy check-in forms both for RepairQ and GSX.</div>
+                <a href="/simplymac/simplecheckin" class="c-link round-edge" target="_blank"> Link</a>
+            </div>
+
+            <div class="container round-edge">
+                <div class="c-title">
+                    <p>macOS Scripts</p>
+                </div>
+                <div class="c-content">A variety of scripts used to diagnose or fix issues on macOS.</div>
+                <a href="/files/macOS Scripts" class="c-link round-edge" target="_blank"> Link</a>
+            </div>
+
+            <div class="container round-edge">
+                <div class="c-title">
+                    <p>macOS Tools</p>
+                </div>
+                <div class="c-content">A collection of tools and programs used at work at Simply Mac.</div>
+                <a href="https://drive.google.com/drive/folders/1lz2qWBdEHS9SvcoCGBVk2WwC2h0ADHu8" class="c-link round-edge" target="_blank"> Link</a>
+            </div>
+
+            <div class="container round-edge">
+                <div class="c-title">
+                    <p>macOS Installers</p>
+                </div>
+                <div class="c-content">A collection of macOS Installers. All read only and up to date.</div>
+                <a href="https://drive.google.com/open?id=1MCnlMxCksBTXNaaoCR5iKr3wJVv20l-1" class="c-link round-edge" target="_blank"> Link</a>
+            </div>
+
+            <div class="container round-edge">
+                <div class="c-title">
+                    <p>Malwarebytes</p>
+                </div>
+                <div class="c-content">Link to the Malwarebytes Mac download. Excellent tool for customers.</div>
+                <a href="https://www.malwarebytes.com/mac-download/" class="c-link round-edge" target="_blank"> Link</a>
+            </div>
+
+            <div class="container round-edge">
+                <div class="c-title">
+                    <p>App Cleaner</p>
+                </div>
+                <div class="c-content">Get rid of all the files when uninstalling an unwanted app. Make sure there's no mess left behind.</div>
+                <a href="https://freemacsoft.net/appcleaner/" class="c-link round-edge" target="_blank"> Link</a>
+            </div>
+
+            <div class="container round-edge">
+                <div class="c-title">
+                    <p>DetectX Swift</p>
+                </div>
+                <div class="c-content">Direct link to the DetectX Swift download. Forgive me father for I have sinned, but their website is annoying as hell.</div>
+                <a href="https://s3.amazonaws.com/sqwarq.com/PublicZips/DetectX_Swift.dmg" class="c-link round-edge" target="_blank"> Link</a>
+            </div>
+
+            <div class="container round-edge">
+                <div class="c-title">
+                    <p>Onyx</p>
+                </div>
+                <div class="c-content">The true optimization tool for macOS. If a laptop has years of content on it, this will make it run faster.</div>
+                <a href="https://www.titanium-software.fr/en/onyx.html" class="c-link round-edge" target="_blank"> Link</a>
+            </div> 
+        </div>
     </main>
 </body>
 
