--- a/site/500.html
+++ b/site/500.html
@@ -5,6 +5,16 @@
         <title>Error: 500</title>
         <meta name="viewport" content="width=device-width">
 
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120281725-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-120281725-1');
+        </script>
+
         <link type="text/css" rel="stylesheet" href="/styles/main.css">
         <link type="text/css" rel="stylesheet" href="/styles/error_page.css">
     </head>
