--- a/site/projects/hackintosh/index.html
+++ b/site/projects/hackintosh/index.html
@@ -6,6 +6,16 @@
     <title>Hackintosh Guides</title>
     <meta name="viewport" content="width=device-width">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120281725-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-120281725-1');
+    </script>
+
     <!-- ****** faviconit.com favicons ****** -->
     <link rel="shortcut icon" href="images/favicon/favicon.ico">
     <link rel="icon" sizes="16x16 32x32 64x64" href="images/favicon/favicon.ico">
