--- a/site/projects/weather/home.html
+++ b/site/projects/weather/home.html
@@ -6,6 +6,16 @@
     <title id="title">Weather Home</title>
     <meta name="viewport" content="width=device-width">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120281725-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-120281725-1');
+    </script>
+
     <link type="text/css" rel="stylesheet" href="/styles/normalize.css">
     <link type="text/css" rel="stylesheet" href="css/main.css">
     <link type="text/css" rel="stylesheet" href="css/mobile.css">
