--- a/site/simplymac/fedexshortener.html
+++ b/site/simplymac/fedexshortener.html
@@ -5,11 +5,42 @@
         <title>FedEx Tracking Number Shortener</title>
         <meta name="viewport" content="width=device-width">
 
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120281725-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-120281725-1');
+        </script>
+
         <link type="text/css" rel="stylesheet" href="/styles/main.css">
-        <link type="text/css" rel="stylesheet" href="operations.css">
     </head>
 
     <style>
+        body {
+            color: var(--slategray);
+        }
+
+        main {
+            padding-left: 10%
+        }
+
+        h1 {
+            text-align: center;
+            color: var(--slategray);
+        }
+
+        .link {
+            color: var(--main-blue);
+        }
+
+        p {
+            margin-top: 5px;
+            margin-bottom: 5px;
+        }
+
         #barcodeInput {
             width: 350px;
         }
