--- a/site/simplymac/servicepart.html
+++ b/site/simplymac/servicepart.html
@@ -6,9 +6,19 @@
     <title>SM Service Part</title>
     <meta name="viewport" content="width=device-width">
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120281725-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-120281725-1');
+    </script>
+
     <link type="text/css" rel="stylesheet" href="/styles/main.css">
-    <link type="text/css" rel="stylesheet" href="operations.css">
-    <link type="text/css" rel="stylesheet" href="servicepart.css">
+    <link type="text/css" rel="stylesheet" href="styles/operations.css">
+    <link type="text/css" rel="stylesheet" href="styles/servicepart.css">
 </head>
 
 <body>
@@ -35,6 +45,6 @@
     </main>
 </body>
 <script src="/scripts/jquery.js"></script>
-<script src="servicepart.js"></script>
+<script src="js/servicepart.js"></script>
 
 </html>
