cleaned up some code

--- a/site/simplymac/operations.html
+++ b/site/simplymac/operations.html
@@ -42,7 +42,7 @@
                 <div class="c-title">
                     <p>Part Recieving</p>
                 </div>
-                <div class="c-content">A form to fill out when recieving parts. Not too useful now.</div>
+                <div class="c-content">A form to fill out when recieving parts. Not too useful at the moment.</div>
                 <a href="/simplymac/servicepart" class="c-link round-edge" target="_blank"> Link</a>
             </div>
 
