--- a/site/simplymac/simplecheckin.html
+++ b/site/simplymac/simplecheckin.html
@@ -114,7 +114,7 @@
                         <textarea rows="3" name="symptom" id="SROSymptomInput"></textarea>
 
                         <div id="SROFormGrid">
-                            <p id="SROBackup">Backup: </p>
+                            <p id="SROBackup">Backed Up: </p>
                             <input type="text" name="backup" id="SROBackupInput" class="textInput" value="Yes">
 
                             <p id="SROTimeframe">Timeframe: </p>
