--- a/site/projects/list.html
+++ b/site/projects/list.html
@@ -37,8 +37,8 @@
                 </div>
 
                 <div class="quicklinksItemDiv">
-                    <a href="/photos">
-                        <div class="quicklinksItem">Photos</div>
+                    <a href="/simplymac">
+                        <div class="quicklinksItem">Simply Mac</div>
                     </a>
                 </div>
 
