Updated part checkin with KGB

--- a/site/simplymac/servicepart.html
+++ b/site/simplymac/servicepart.html
@@ -29,12 +29,14 @@
     </header>
     <main>
         <form action="javascript:submit()" id="form">
-            <p id="SROLabel">SRO Number: </p>
+            <p id="SROLabel">GSX PO Number: </p>
             <input type="text" name="SRO" id="SROInput" class="textInput">
             <p id="sentTrackingLabel">Sent Tracking Number: </p>
             <input type="text" name="sentTracking" id="sentTrackingInput" class="textInput">
             <p id="returnTrackingLabel">Return Tracking Number: </p>
             <input type="text" name="returnTracking" id="returnTrackingInput" class="textInput">
+            <p id="KGBLabel">KGB: </p>
+            <input type="text" name="KGB" id="KGBInput" class="textInput">
             <br>
             <p>Sales Order in RQ? </p>
             <input type="checkbox" name="RQCheck" id="RQCheck" class="checkbox" checked>
