Updated simple checkin with more repairs and better timeframes

--- a/site/simplymac/simplecheckin.html
+++ b/site/simplymac/simplecheckin.html
@@ -47,7 +47,8 @@
                     <option>7. iPhone X Display REP</option>
                     <option>8. MacBook Keyboard REP</option>
                     <option>9. MacBook Pro 15'' Battery REP</option>
-
+                    <option>10. Macbook Swollen Battery</option>
+                    <option>11. Dead Unit/No Power</option>
                 </select>
             </div>
 
@@ -108,7 +109,7 @@
 
             <div id="SROSideDiv">
                 <div id="SROCheckIn" class="formDiv">
-                    <h3>SRO Check-In</h3>
+                    <h3>RepairQ Check-In Notes</h3>
                     <form action="javascript:SROCopySubmission()" id="SROForm">
                         <p id="SROSymptom">Symptoms: </p>
                         <textarea rows="3" name="symptom" id="SROSymptomInput"></textarea>
@@ -120,10 +121,9 @@
                             <p id="SROTimeframe">Timeframe: </p>
                             <select id="SROTimeframeInput">
                                 <option>EOD</option>
-                                <option>2 - 3 Business Days</option>
-                                <option>3 - 5 Business Days</option>
-                                <option>5 - 7 Business Days</option>
-                                <option>1 - 2 Weeks</option>
+                                <option>3 Business Days</option>
+                                <option>1 week</option>
+                                <option>2 weeks</option>
                                 <option>Call when ready</option>
                             </select>
 
@@ -149,16 +149,18 @@
                 </div>
 
                 <div id="SRONotesDiv" class="formDiv">
-                    <h3>Common SRO Notes</h3>
+                    <h3>Common Notes</h3>
 
                     <p>Called and spoke with customer, </p>
                     <p>Called and spoke with customer, let them know that their device is ready to be picked up.</p>
                     <p>Called customer and left a voicemail, </p>
                     <p>Called customer and left a voicemail notifying them that their device is ready to be picked up.</p>
+                    <p>Emailed customer and notified them that their device is ready for pickup.</p>
+                    <p>Sent an automated email for pickup.</p>
                     <p>Removed all malware from the device and it is running a lot better.</p>
                     <p>Performed an archive install of macOS, computer is booting normally.</p>
                     <p>Reformatted drive and installed macOS.</p>
-                    <p>Found SRO in outgoing paperwork pile, marking it as picked up.</p>
+                    <p>Found RepairQ Paperwork in outgoing paperwork pile, marking it as picked up.</p>
                     <p>Thanks for choosing Simply Mac as your Apple Service Authorized Service Provider. As a thank you we would like to offer you 15% any accessory and our Simple Care warranty at a great price! We are able to offer you a Warranty on your device starting at $99 for a years worth of coverage.  Ask any of our associates for more information.</p>
                 </div>
             </div>
