--- a/site/simplymac/simplecheckin.html
+++ b/site/simplymac/simplecheckin.html
@@ -37,18 +37,18 @@
             <div id="commonSelectDiv">
                 <p id="commonTitle">Common Repairs:</p>
                 <select id="commonSelect">
-                    <option>None</option>
-                    <option>1. iPhone Broken Display Replacement</option>
-                    <option>2. iPhone Battery replacement</option>
-                    <option>3. Malware Removal</option>
-                    <option>4. Wipe & Reinstall</option>
-                    <option>5. Boot Issues</option>
-                    <option>6. iPhone 7 No-Service REP</option>
-                    <option>7. iPhone X Display REP</option>
-                    <option>8. MacBook Keyboard REP</option>
-                    <option>9. MacBook Pro 15'' Battery REP</option>
-                    <option>10. Macbook Swollen Battery</option>
-                    <option>11. Dead Unit/No Power</option>
+                    <option value="0">None</optionvalue>
+                    <option value="1">1. iPhone Broken Display Replacement</option>
+                    <option value="2">2. iPhone Battery replacement</option>
+                    <option value="3">3. Malware Removal</option>
+                    <option value="4">4. Wipe & Reinstall</option>
+                    <option value="5">5. Boot Issues</option>
+                    <option value="6">6. iPhone 7 No-Service REP</option>
+                    <option value="7">7. iPhone X Display REP</option>
+                    <option value="8">8. MacBook Keyboard REP</option>
+                    <option value="9">9. MacBook Pro 15'' Battery REP</option>
+                    <option value="10">10. Macbook Swollen Battery</option>
+                    <option value="11">11. Dead Unit/No Power</option>
                 </select>
             </div>
 
